update name and logo

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
   </intent>
 </queries>
     <application
-        android:label="Hello World"
+        android:label="Fresh News"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
