--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
+  device_preview: ^1.2.0
   dio: ^5.4.3+1
   equatable: ^2.0.5
   flutter:
@@ -53,10 +54,10 @@ dependencies:
   url_launcher: ^6.3.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
